--- a/board_front/front/package.json
+++ b/board_front/front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
+    "react-devtools": "^4.28.4",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
