--- a/board_front/front/package.json
+++ b/board_front/front/package.json
@@ -11,10 +11,12 @@
     "react": "^18.2.0",
     "react-devtools": "^4.28.4",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-style": "^0.5.5",
+    "recoil": "^0.7.7",
     "styled-reset": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
