--- a/spring_board/src/main/resources/application.yml
+++ b/spring_board/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring_board
+    url: jdbc:mysql://localhost:3306/board
     username: root
     password: 1q2w3e4r
 
