--- a/board_front/front/package.json
+++ b/board_front/front/package.json
@@ -15,9 +15,11 @@
     "react-devtools": "^4.28.4",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-style": "^0.5.5",
     "recoil": "^0.7.7",
     "styled-react": "^0.4.0",
